--- a/balkony.html
+++ b/balkony.html
@@ -138,40 +138,42 @@
     			<div class="heading-image"><i class="calc-ico"></i></div>
     			<h2 class="heading white">Калькулятор стоимости</h2>
     		</div>
-			<div class="row">
-				<div class="col-md-12 col-md-6">
-					<div class="form-group">
-						<label for="calc-type" class="text-warning">Балкон/Лоджия</label>
-						<select name="calc-type" class="form-control form-control-sm" id="calc-type">
-						  <option>--</option>
-						  <option value="1.2">Балкон</option>
-						  <option value="1.3">Лоджия</option>
-						</select>
-					  </div>
+			<div class="calc-wrapper">
+				<div class="row">
+					<div class="col-md-12 col-md-6">
+						<div class="form-group">
+							<label for="calc-type" class="text-warning">Балкон/Лоджия</label>
+							<select name="calc-type" class="form-control form-control-sm" id="calc-type">
+								<option>--</option>
+								<option value="1.2">Балкон</option>
+								<option value="1.3">Лоджия</option>
+							</select>
+							</div>
+					</div>
+					<div class="col-md-12 col-md-6">
+						<div class="form-group">
+							<label for="calc-type-material" class="text-warning">Выберите тип остекления</label>
+							<select name="calc-type-material" class="form-control form-control-sm" id="calc-type-material">
+								<option>--</option>
+								<option value="1">Холодное Аллюминием</option>
+								<option value="2">Теплое ПВХ</option>
+							</select>
+							</div>
+					</div>
 				</div>
-				<div class="col-md-12 col-md-6">
-					<div class="form-group">
-						<label for="calc-type-material" class="text-warning">Выберите тип остекления</label>
-						<select name="calc-type-material" class="form-control form-control-sm" id="calc-type-material">
-						  <option>--</option>
-						  <option value="1">Холодное Аллюминием</option>
-						  <option value="2">Теплое ПВХ</option>
-						</select>
-					  </div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-12 col-md-6">
-					<div class="form-group">
-						<label for="calc-input" class="text-warning">Площадь (м&sup2;)</label>
-						<input name="calc-input" type="number" class="form-control" id="calc-input" placeholder="Площадь (м&sup2;)">
-					  </div>
-				</div>
-				<div class="col-md-12 col-md-6">
-					<div class="form-group">
-						<label for="calc-total" class="text-warning">Итого</label>
-						<input name="calc-total" type="number" class="form-control" id="calc-total" placeholder="Итого" disabled>
-					  </div>
+				<div class="row">
+					<div class="col-md-12 col-md-6">
+						<div class="form-group">
+							<label for="calc-input" class="text-warning">Площадь (м&sup2;)</label>
+							<input name="calc-input" type="number" class="form-control" id="calc-input" placeholder="Площадь (м&sup2;)">
+							</div>
+					</div>
+					<div class="col-md-12 col-md-6">
+						<div class="form-group">
+							<label for="calc-total" class="text-warning">Итого</label>
+							<input name="calc-total" type="number" class="form-control" id="calc-total" placeholder="Итого" disabled>
+							</div>
+					</div>
 				</div>
 			</div>
     	</div>
@@ -607,22 +609,31 @@
     			<h2 class="heading"><span>Сертификаты</span> и <span>документы</span></h2>
     		</div>
     		<div class="text-center">
+					<div class="popup-img">
+						<img src="images/documents/original/document4.jpg" class="popp-img__img" alt="">
+					</div>
 	    		<div class="col-sm-4">
-	    			<a href="images/documents/original/document4.jpg" class="sertificate-document" data-fancybox-group="gallery-documents">
-	    				<img src="images/documents/document4.jpg" class="img-responsive" alt="">
-	    				<div class="document-overlay"></div>
+	    			<a href="#documents" class="sertificate-document" data-fancybox-group="gallery-documents">
+							<div class="document-inner">
+								<img src="images/documents/document4.jpg" class="img-responsive" alt="">
+	    					<div class="document-overlay"></div>
+							</div>
 	    			</a>
 	    		</div>
 	    		<div class="col-sm-4">
-	    			<a href="images/documents/original/document4.jpg" class="sertificate-document" data-fancybox-group="gallery-documents">
-	    				<img src="images/documents/document4.jpg" class="img-responsive" alt="">
-	    				<div class="document-overlay"></div>
+	    			<a href="#documents" class="sertificate-document" data-fancybox-group="gallery-documents">
+							<div class="document-inner">
+								<img src="images/documents/document4.jpg" class="img-responsive" alt="">
+	    					<div class="document-overlay"></div>
+							</div>
 	    			</a>
 	    		</div>
 	    		<div class="col-sm-4">
-	    			<a href="images/documents/original/document4.jpg" class="sertificate-document" data-fancybox-group="gallery-documents">
-	    				<img src="images/documents/document4.jpg" class="img-responsive" alt="">
-	    				<div class="document-overlay"></div>
+	    			<a href="#documents" class="sertificate-document" data-fancybox-group="gallery-documents">
+							<div class="document-inner">
+								<img src="images/documents/document4.jpg" class="img-responsive" alt="">
+	    					<div class="document-overlay"></div>
+							</div>
 	    			</a>
 	    		</div>
     		</div>
