--- a/index.html
+++ b/index.html
@@ -423,22 +423,31 @@
     			<h2 class="heading"><span>Сертификаты</span> и <span>документы</span></h2>
     		</div>
     		<div class="text-center">
+					<div class="popup-img">
+						<img src="images/documents/original/document4.jpg" class="popp-img__img" alt="">
+					</div>
 	    		<div class="col-sm-4">
-	    			<a href="images/documents/original/document4.jpg" class="sertificate-document" data-fancybox-group="gallery-documents">
-	    				<img src="images/documents/document4.jpg" class="img-responsive" alt="">
-	    				<div class="document-overlay"></div>
+	    			<a href="#documents" class="sertificate-document" data-fancybox-group="gallery-documents">
+	    				<div class="document-inner">
+								<img src="images/documents/document4.jpg" class="img-responsive" alt="">
+	    					<div class="document-overlay"></div>
+							</div>
 	    			</a>
 	    		</div>
 	    		<div class="col-sm-4">
-	    			<a href="images/documents/original/document4.jpg" class="sertificate-document" data-fancybox-group="gallery-documents">
-	    				<img src="images/documents/document4.jpg" class="img-responsive" alt="">
-	    				<div class="document-overlay"></div>
+	    			<a href="#documents" class="sertificate-document" data-fancybox-group="gallery-documents">
+							<div class="document-inner">
+								<img src="images/documents/document4.jpg" class="img-responsive" alt="">
+	    					<div class="document-overlay"></div>
+							</div>
 	    			</a>
 	    		</div>
 	    		<div class="col-sm-4">
-	    			<a href="images/documents/original/document4.jpg" class="sertificate-document" data-fancybox-group="gallery-documents">
-	    				<img src="images/documents/document4.jpg" class="img-responsive" alt="">
-	    				<div class="document-overlay"></div>
+	    			<a href="#documents" class="sertificate-document" data-fancybox-group="gallery-documents">
+							<div class="document-inner">
+								<img src="images/documents/document4.jpg" class="img-responsive" alt="">
+	    					<div class="document-overlay"></div>
+							</div>
 	    			</a>
 	    		</div>
     		</div>
